feat(idea): release 4.9 with modern IDEA compatibility
Support IDEA 2025.3 and 2026.1 while preserving legacy parser loading in one plugin archive. Improve shared template parsing and add compatibility regression coverage.

Set Zircon dependencies to 3.3.2, refresh setup documentation and changelog, and include the 4.9 installation ZIP.